# A8

./: CMakeLists.txt
include/: circularly_linked.hpp  doubly_linked.hpp  singly_linked.hpp
src/: main.cpp
tests/: test_linked_list.cpp
